# -launcher

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md
.github/workflows/: rust.yml
contrib/: discord-launcher.conf  discord-launcher.desktop
src/: args.rs  config.rs  discord.rs  extract.rs  http.rs  lib.rs  main.rs  paths.rs  progress.rs
