[package]
name = "discord-launcher"
version = "0.1.0"
edition = "2021"
description = "Keeps an up-to-date Discord install in your home directory, so Discord updates don't need root"
authors = ["Lucas Vasconcelos <lucaslou4@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vscncls/discord-launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bytes = "1.1.0"
clap = { version = "4", features = ["derive"] }
dirs = "6"
env_logger = "0.11"
libflate = "2"
log = "0.4.17"
nix = { version = "0.31", default-features = false, features = ["process"] }
reqwest = "0.13"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tar = "0.4.38"
tokio = { version = "1.18.1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "time",
  "fs",
] }
toml = "1"
xch = "1.1.0"
